# services/metadata/docs/swagger.json
@@ -339,6 +339,13 @@
                 },
                 "status": {
                     "$ref": "#/definitions/flowix_metadata_internal_model.VideoStatus"
+                },
+                "thumbnail_s3_key": {
+                    "type": "string"
+                },
+                "thumbnail_url": {
+                    "description": "alias for thumbnail_s3_key",
+                    "type": "string"
                 }
             }
         },
@@ -379,6 +386,12 @@
                 },
                 "status": {
                     "$ref": "#/definitions/flowix_metadata_internal_model.VideoStatus"
+                },
+                "thumbnail_s3_key": {
+                    "type": "string"
+                },
+                "thumbnail_url": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
